S3接続で使用するライブラリを変更し正常にUL/DLを確認。Cognitoとの連携も行いたい。